# viewephys

./: .flake8  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: code_test_and_deploy.yml
examples/: README.md  from_array.py  from_binary.py
src/viewephys/: command_line.py  configs.py  gui.py  nav_file.ui  picks.csv  raster.py  raster.ui  spike_interface.ui
src/viewephys/tests/: test_model.py  test_pick.py
