[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viewephys"
version = "1.1.0"
description = "Neuropixel raw data viewer"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Olivier Winter" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "easyqc>=0.7.0",
    "ibl-neuropixel>=1.0.1",
    "ibllib",
    "iblutil>=1.6.0",
    "pandas",
    "qtpy",
]

[project.urls]
Homepage = "https://github.com/int-brain-lab/viewephys"
"Bug Tracker" = "https://github.com/int-brain-lab/viewephys/issues"

[project.scripts]
viewephys = "viewephys.command_line:viewephys"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
viewephys = ["raster.ui", "nav_file.ui", "viewephys.svg"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
