[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "viewephys"
version = "1.1.0"
description = "Neuropixel raw data viewer"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Olivier Winter" }
]
requires-python = ">=3.10"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "easyqc>=0.7.0",
    "ibl-neuropixel>=1.0.1",
    "ibllib",
    "iblutil>=1.6.0",
    "pandas",
    "qtpy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "coverage",
  "mypy",
  "pre-commit",
  "ruff",
  "codespell",
]
pyqt5 = ["PyQt5>=5.15.0"]
pyqt6 = ["PyQt6>=6.2.0"]
pyside2 = ["PySide2>=5.15.0"]
pyside6 = ["PySide6>=6.2.0"]
qt = ["PyQt5>=5.15.0"]  # Default to PyQt5 for backward compatibility

[project.urls]
Homepage = "https://github.com/int-brain-lab/viewephys"
"Bug Tracker" = "https://github.com/int-brain-lab/viewephys/issues"

[project.scripts]
viewephys = "viewephys.command_line:viewephys"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
viewephys = ["raster.ui", "nav_file.ui", "viewephys.svg"]

[tool.mypy]
exclude = ["tests/", "docs/", "examples/"]

[tool.ruff]
line-length = 88
exclude = ["__init__.py", "build", ".eggs"]
fix = true

[tool.ruff.lint]
# See https://docs.astral.sh/ruff/rules/
ignore = [
  "D203", # one blank line before class
  "D213", # multi-line-summary second line
]
select = [
  "E",      # pycodestyle errors
  "F",      # Pyflakes
  "UP",     # pyupgrade
  "I",      # isort
  "B",      # flake8 bugbear
  "SIM",    # flake8 simplify
  "TC",     # flake8 type-checking
  "C90",    # McCabe complexity
#  "D",      # pydocstyle  For now, don't lint docstrings
  "NPY201", # checks for syntax that was deprecated in numpy2.0
]
per-file-ignores = { "tests/*" = [
  "D100", # missing docstring in public module
  "D205", # missing blank line between summary and description
  "D103", # missing docstring in public function
], "examples/*" = [
  "B018", # Found useless expression
  "D103", # Missing docstring in public function
  "D400", # first line should end with a period.
  "D415", # first line should end with a period, question mark...
  "D205", # missing blank line between summary and description
] }

[tool.ruff.format]
docstring-code-format = true # Also format code in docstrings

[tool.codespell]
skip = '.git,.tox,*.svg,docs/source/community/people.md'
check-hidden = true
